[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"

# -- from libs/chord-dht/Cargo.toml
# [dependencies]
# rand = "0.8"
# log = "0.4"
# env_logger = "0.9"
# anyhow = "1.0"
# thiserror = "1.0"
# inquire = "0.3.0-alpha.2"

# futures = "0.3"
# serde = "1.0"
# tarpc = { version = "0.27", features = ["full"] }
# clap = { version = "3.1", features = ["derive"] }

# tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
